# jupylink

./: .gitignore  123.ipynb  123_record.json  123_record.py  CHANGELOG.md  README.md  SKILL.md  pyproject.toml  test.ipynb  test1111.ipynb  test1111_record.json  test1111_record.py  test222.ipynb  test222_record.json  test222_record.py  test_notebook_record.json  test_notebook_record.py  test_record.json  test_record.py
.claude/: mcp.json
.claude/skills/jupylink/: CHANGELOG.md  SKILL.md  pyproject.toml
.claude/skills/jupylink/kernels/jupylink/: README.md
.claude/skills/jupylink/kernels/jupylink2/: kernel.json
.claude/skills/jupylink/src/jupylink/: _kernel_py2.py  _kernel_py3.py  cli.py  executor.py  file_lock.py  ipynb_ops.py  kernel.py  kernel_ide_proxy.py  kernel_registry.py  magics.py  mcp_server.py  notify_ide.py  record_manager.py
.claude/skills/jupylink/tests/: test_ipynb_ops.py  test_kernel_ide_proxy.py
.cursor/plans/: jupyter_kernel_proxy_mvp_dcb53951.plan.md
.cursor/rules/: ipynb-jupylink-only.mdc
.cursor/skills/jupylink/: SKILL.md
kernels/jupylink/: kernel.json
src/jupylink/: __init__.py  __main__.py  cli.py  executor.py  file_lock.py  ipynb_ops.py  kernel.py  kernel_ide_proxy.py  kernel_registry.py  magics.py  mcp_server.py  notify_ide.py  record_manager.py
tests/: conftest.py  test_executor.py  test_file_locking.py  test_kernel_ide_proxy.py  test_kernel_registry_remote.py  test_main_module.py  test_mcp_server.py  test_platform.py  test_record_manager.py
