[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupylink"
version = "0.1.1"
description = "JupyLink - Jupyter kernel proxy that generates agent-friendly execution records from ipynb"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.11",
    "nbformat>=5.0",
    "jupyter-client>=7.0",
    "typer>=0.9",
]

[project.scripts]
jupylink = "jupylink.cli:app"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest",
    "mcp>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jupylink"]

[tool.hatch.build.targets.sdist]
include = ["kernels"]
